--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <div class="container">
+    <!-- card -->
+    <div class="row triviaCard">
+      <div class="col-md-12">
+        <!-- title -->
+        <div class="row">
+          <div class="col-md-12">
+            <h1>TRIVIA GAME.</h1>
+          </div>
+        </div>
+        <!-- question, body, etc -->
+        <div class="row">
+          <div class="col-md-12">
 
-
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
