initial logic of trvia game set up

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <!-- question, body, etc -->
         <div class="row">
           <div class="col-md-12">
-
+            <div id="question"></div>
+            <div id="answers"></div>
           </div>
         </div>
       </div>
