added loss event

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- question, body, etc -->
         <div class="row">
           <div class="col-md-12">
+            <div id="timer"></div>
             <div id="question"></div>
             <div id="answers"></div>
           </div>
