added image assets and installed a timer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="timer"></div>
             <div id="question"></div>
             <div id="answers"></div>
+            <div id="picture"></div>
           </div>
         </div>
       </div>
