--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div id="question"></div>
             <div id="answers"></div>
             <div id="picture"></div>
+            <div id="gameMessage"></div>
+            <div id="tryAgain"></div>
           </div>
         </div>
       </div>
