--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <div class="container">
     <!-- card -->
     <div class="row triviaCard">
-      <div class="col-md-12">
+      <div class="col-md-12 cardContent">
         <!-- title -->
         <div class="row">
           <div class="col-md-12">
-            <h1>TRIVIA GAME.</h1>
+            <h1>TRIVIA GAME</h1>
           </div>
         </div>
         <!-- question, body, etc -->
-        <div class="row">
+        <div class="row cardBody">
           <div class="col-md-12">
-            <div id="timer"></div>
-            <div id="question"></div>
+            <div class="text-center" id="timer"></div>
+            <div class="text-center" id="question"></div>
             <div id="answers"></div>
-            <div id="picture"></div>
-            <div id="gameMessage"></div>
+            <div class="text-center" id="picture"></div>
+            <div class="text-center" id="gameMessage"></div>
             <div id="tryAgain"></div>
           </div>
         </div>
