--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="col-md-12 cardContent">
         <!-- title -->
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12 titleWrapper">
             <h1>TRIVIA GAME</h1>
           </div>
         </div>
