--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Trivia Game</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand" rel="stylesheet">
@@ -18,7 +18,7 @@
         <!-- title -->
         <div class="row">
           <div class="col-md-12 titleWrapper">
-            <h1>TRIVIA GAME</h1>
+            <h1 id="title">TRIVIA GAME</h1>
           </div>
         </div>
         <!-- question, body, etc -->
